--- a/Image Uploader/vbo_km.html
+++ b/Image Uploader/vbo_km.html
@@ -572,9 +572,7 @@
 
             $("#eventImage").click(function () {
                 $("#imageFile").click();
-                $("#eventImageProgress").css("width", 0 + "%");
-                $("#eventImageProgress").removeClass("progress-bar-success");
-                $("#eventImageProgress").addClass("progress-bar-danger");
+                $("#eventImageProgress").css("width", 0 + "%")
             });
             $("#imageFile").change(function () {
                 var preview = $("#eventImage");
