--- a/Image Uploader/facebook.html
+++ b/Image Uploader/facebook.html
@@ -1,6 +1,6 @@
 
-<meta property="og:url"                content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
-<meta property="og:type"               content="article" />
+<meta property="og:url"                content="http://test-2869.apphb.com" />
+<meta property="og:type"               content="video.movie" />
 <meta property="og:title"              content="When Great Minds Don’t Think Alike" />
-<meta property="og:description"        content="How much does culture influence creative thinking?" />
-<meta property="og:image"              content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
+<meta property="og:description"        content="Vbo tickets Event\n Event time:02/02/2017 16:00" />
+<meta property="og:image"              content="https://s3-us-west-2.amazonaws.com/aws.vbotickets.com/_images/logo/eventmanager1.jpg" />
