--- a/Image Uploader/facebook.html
+++ b/Image Uploader/facebook.html
@@ -1,5 +1,5 @@
 
-<meta property="og:url"                content="http://test-2869.apphb.com" />
+<meta property="og:url"                content="http://test-2869.apphb.com/facebook.html" />
 <meta property="og:type"               content="video.movie" />
 <meta property="og:title"              content="When Great Minds Don’t Think Alike" />
 <meta property="og:description"        content="Vbo tickets Event\n Event time:02/02/2017 16:00" />
