--- a/Image Uploader/facebook.html
+++ b/Image Uploader/facebook.html
@@ -3,4 +3,4 @@
 <meta property="og:type" content="video.movie" />
 <meta property="og:title" content="When Great Minds Don’t Think Alike" />
 <meta property="og:description" content="Vbo tickets Event\n Event time:02/02/2017 16:00" />
-<meta property="og:image" content="https://scontent.fkhi1-1.fna.fbcdn.net/v/t39.2081-6/c0.0.129.129/p128x128/19876779_362525950827348_4530167139717349376_n.png?oh=4c3591207e27229644eafab5d1edb677&oe=5A0CC98F" />
+<meta property="og:image" content="https://s3-us-west-2.amazonaws.com/aws.vbotickets.com/_images/orgs/2277_logo.png" />
