--- a/Image Uploader/facebook.html
+++ b/Image Uploader/facebook.html
@@ -3,4 +3,4 @@
 <meta property="og:type" content="video.movie" />
 <meta property="og:title" content="When Great Minds Don’t Think Alike" />
 <meta property="og:description" content="Vbo tickets Event\n Event time:02/02/2017 16:00" />
-<meta property="og:image" content="https://s3-us-west-2.amazonaws.com/aws.vbotickets.com/_images/orgs/2277_logo.png" />
+<meta property="og:image" content="https://doc-10-1k-docs.googleusercontent.com/docs/securesc/a9q1fr022d4l7ocjb2uece1h9h3suqdq/3gfsggbu1h7daicknk8n7pprlpk9g4vu/1500638400000/17587007230170427856/17587007230170427856/0BxI8B-I9TSwJZUpiZFAtU2h1ZUU?e=download&h=18219964421285168429&nonce=0k1ha0vsmokjq&user=17587007230170427856&hash=rsgk6eeutam53nrh482m8u299lme35uo" />
