--- a/Image Uploader/facebook.html
+++ b/Image Uploader/facebook.html
@@ -4,3 +4,4 @@
 <meta property="og:title" content="When Great Minds Don’t Think Alike" />
 <meta property="og:description" content="Vbo tickets Event\n Event time:02/02/2017 16:00" />
 <meta property="og:image" content="http://test-2869.apphb.com/images/EventImages/event.jpg" />
+<img src="images/EventImages/event.jpg" />
