--- a/Image Uploader/facebook.html
+++ b/Image Uploader/facebook.html
@@ -2,6 +2,6 @@
 <meta property="og:url" content="http://test-2869.apphb.com/facebook.html" />
 <meta property="og:type" content="video.movie" />
 <meta property="og:title" content="When Great Minds Don’t Think Alike" />
-<meta property="og:description" content="Vbo tickets Event\n Event time:02/02/2017 16:00" />
+<meta property="og:description" content="Vbo tickets Event<br/> Event time:02/02/2017 16:00" />
 <meta property="og:image" content="http://test-2869.apphb.com/images/EventImages/event.jpg" />
 <img src="images/EventImages/event.jpg" />
